--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <img src="img/Rectangle 9.png" alt="mainphoto">
     <header>
         <nav>
             <div class="menu">
@@ -25,7 +26,7 @@
 
         </nav>
         <div>
-            <img src="img/mainphoto.jpg" alt="mainphoto">
+           
             <h1>
                 The best products
                 start with Figma
