--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Figma land</title>
 </head>
 
 <body>
-    <img src="img/Rectangle 9.png" alt="mainphoto">
     <header>
+        <img width="200" src="img/main-photo.png" alt="people use computer">
         <nav>
             <div class="menu">
                 <a href="#">Home</a>
@@ -19,25 +19,124 @@
                 <a href="#">About</a>
                 <a href="#">Contact</a>
             </div>
-            <img src="img/Rectangle 4.png" alt="Figma logo">
-            <div class="social-icons">
-                <img src="img/right.png" alt="Right icon">
+            <div class="logo-figma"><img src="img/logo-figma.png" alt="Figma logo">
             </div>
-
+            <div class="social-icons"><img src="img/logo-social-icons.png" alt="icons">
+            </div>
         </nav>
         <div>
-           
-            <h1>
+            <h1 class="main-title">
                 The best products
                 start with Figma
             </h1>
-            <p>Most calendars are designed for teams. Slate is designed
+            <p class="paragraph">Most calendars are designed for teams. Slate is designed
                 for freelancers</p>
-            <button type="button">
+            <button class="blue-button" type="button">
                 Try For Free
             </button>
         </div>
     </header>
+    <main>
+        <!-- Features -->
+        <div>
+            <h2 class="other-title">Features</h2>
+            <p class="paragraph">Most calendars are
+                designed for teams. </p>
+            <section>
+                <iframe src="https://youtu.be/_h9iaVrDCLE" frameborder="0"></iframe>
+                <section>
+                    <img src="img/logo-driwing.png" alt="logo-driwing">
+                    <h3>OpenType features
+                        Variable fonts</h3>
+                    <p>Slate helps you see how
+                        many more days you need
+                        to work to reach your
+                        financial goal.</p>
+                </section>
+                <section>
+                    <img src="img/logo-draw.png" alt="logo-draw">
+                    <h3>Design with real data</h3>
+                    <p>Slate helps you see how
+                        many more days you need
+                        to work to reach your
+                        financial goal.</p>
+                </section>
+                <section>
+                    <img src="img/logo-brush.png" alt="logo-brush">
+                    <h3>Fastest way to
+                        take action</h3>
+                    <p>Slate helps you see how
+                        many more days you need
+                        to work to reach your
+                        financial goal.</p>
+                </section>
+            </section>
+        </div>
+        <!-- Fastest way to organize  -->
+        <div>
+            <h2 class="other-title">Fastest way to
+                organize </h2>
+            <p class="paragraph">Most calendars are
+                designed for teams. </p>
+            <button type="button">Try for free</button>
+            <img width="200" src="img/screen-frame.png" alt="computer screen">
+        </div>
+        <!-- Newsletters -->
+        <div>
+            <img width="200" src="img/photo-letters.png" alt="people and letters">
+            <h3>At your fingertips</h3>
+            <h2>Lightning fast
+                prototyping </h2>
+            <h3>Subscribe to our Newsletter</h3>
+            <p>Available exclusivery on Figmaland</p>
+            <input type="text" placeholder="Your email">
+            <button type="button">Subscribe</button>
+        </div>
+        <!-- Partners -->
+        <div>
+            <h2 class="other-title">Partners</h2>
+            <p class="paragraph">Most calendars are designed for teams.
+                Slate is designed for freelancers</p>
+            <span>Client Name</span>
+            <img src="img/logo-google.png" alt="logo google">
+            <span>Client Name</span>
+            <img src="img/logo-amazon.png" alt="logo amazon">
+            <span>Client Name</span>
+            <img src="img/logo-microsoft.png" alt="logo microsoft">
+            <span>Client Name</span>
+            <img src="img/logo-uber.png" alt="logo uber">
+            <span>Client Name</span>
+            <img src="img/logo-dropbox.png" alt="logo dropbox">
+            <button type="button">Try for free</button>
+        </div>
+        <!-- Testimonials -->
+        <div>
+            <h2 class="other-title">Testimonials</h2>
+            <img src="img/logo-ibm.png" alt="letters IBM">
+            <p class="paragraph">Most calendars are designed for teams. Slate is designed for freelancers
+                who want a simple way to plan their schedule.</p>
+            <img src="img/avatar.png" alt="man in blue hat">
+            <p>Organize across
+                Ui designer</p>
+            <button type="button">More testimonials</button>
+        </div>
+        <!-- Pricing -->
+        <div>
+            <h2 class="other-title">Pricing</h2>
+            <p class="paragraph">Most calendars are
+                designed for teams. </p>
+
+        </div>
+        <!-- Contact Us -->
+        <div>
+            <h2 class="other-title">Contact Us</h2>
+            <p class="paragraph">Most calendars are designed for teams.
+                Slate is designed for freelancers</p>
+        </div>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
